@@ -5,7 +5,7 @@ extension memchan {
 
     version	   1.2
     copying-policy {BSD-Style, see 'tcl'-license}
-    date           {@DATE@}
+    date           {@mDate@}
 
     comment {
 	Implements memory channels, i.e. channels
@@ -13,17 +13,17 @@ extension memchan {
     }
 
     primary-urls {
-        ftp://ftp.westend.com/pub/aku/memchan@VERSION@.tar.gz
-        ftp://ftp.westend.com/pub/aku/memchan@NODOT_VERSION@.zip
-        ftp://ftp.westend.com/pub/aku/memchan@VERSION@.readme
-        ftp://ftp.westend.com/pub/aku/mchan@NODOT_VERSION@b.zip
+        ftp://ftp.westend.com/pub/aku/memchan@mFullVersion@.tar.gz
+        ftp://ftp.westend.com/pub/aku/memchan@mDosVersion@.zip
+        ftp://ftp.westend.com/pub/aku/memchan@mFullVersion@.README
+        ftp://ftp.westend.com/pub/aku/mchan@mDosVersion@b.zip
     }
 
     secondary-urls {
-	ftp://ftp.kisters.de/pub/lang/tcl/ext/memchan@VERSION@.tar.gz
-	ftp://ftp.kisters.de/pub/lang/tcl/ext/memchan@NODOT_VERSION@.zip
-	ftp://ftp.kisters.de/pub/lang/tcl/ext/memchan@VERSION@.readme
-        ftp://ftp.kisters.de/pub/lang/tcl/ext/mchan@NODOT_VERSION@b.zip
+	ftp://ftp.kisters.de/pub/lang/tcl/ext/memchan@mFullVersion@.tar.gz
+	ftp://ftp.kisters.de/pub/lang/tcl/ext/memchan@mDosVersion@.zip
+	ftp://ftp.kisters.de/pub/lang/tcl/ext/memchan@mFullVersion@.readme
+        ftp://ftp.kisters.de/pub/lang/tcl/ext/mchan@mDosVersion@b.zip
     }
 
     dependencies {tcl7.6 or higher}
