@@ -5,9 +5,9 @@ AC_REVISION($Id$)
 dnl
 AC_INIT(memchan.c)
 
-MEMCHAN_VERSION=@VERSION@
-MEMCHAN_MAJOR_VERSION=@MAJOR_VERSION@
-MEMCHAN_MINOR_VERSION=@MINOR_VERSION@
+MEMCHAN_VERSION=@mFullVersion@
+MEMCHAN_MAJOR_VERSION=@mMajorVersion@
+MEMCHAN_MINOR_VERSION=@mMinorVersion@
 VERSION=${MEMCHAN_VERSION}
 
 TCL_REQ_MAJOR_VERSION=7
